# zotero-annotator

./: .env.example  .gitignore  CLI.md  LICENSE  LOCAL_LLM_SETUP.md  README.md  TODO.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cli.md  configuration.md  development.md  local-llm.md  setup.md  workflows.md
src/zotero_annotator/: cli.py  config.py  pipeline.py
src/zotero_annotator/clients/: grobid.py  zotero.py
src/zotero_annotator/models/: __init__.py  results.py  zotero.py
src/zotero_annotator/services/: annotation_position.py  paragraph_extractor.py  paragraphs.py  pdf_pages.py  pipeline.py  pymupdf_adapter.py  pymupdf_paragraphs.py
src/zotero_annotator/services/translators/: __init__.py  base.py  chat_completions.py  chatgpt.py  deepl.py  factory.py  llm_common.py  ollama.py  prompts.py
src/zotero_annotator/utils/: __init__.py  text.py
tests/: conftest.py  test_config.py
tests/models/: test_results.py
tests/services/: test_annotation_position.py  test_paragraphs.py  test_pdf_pages.py  test_pipeline_build_annotations.py  test_pipeline_extract_paragraphs.py  test_pipeline_fetch.py  test_pipeline_selfhealing.py  test_pipeline_translate.py  test_pipeline_write_annotations.py  test_pymupdf_paragraphs.py
tests/services/translators/: test_base_retry.py
tests/utils/: test_text.py
