[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "zotero-annotator"
version = "0.1.0"
description = "Automated Zotero PDF paragraph translation and annotation pipeline"
authors = [{ name = "wataru nakamura (naka-wata)" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7",
  "httpx>=0.27",
  "pypdf>=4.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
zotero-annotator = "zotero_annotator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_annotator"]
