[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "zotero-annotator"
version = "0.1.0"
description = "Automated Zotero PDF paragraph translation and annotation pipeline"
authors = [{ name = "wataru nakamura (naka-wata)" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7",
  "httpx>=0.27",
  "pypdf>=4.0",
  "pymupdf>=1.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
zotero-annotator = "zotero_annotator.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10"
]

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_annotator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
