[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "zotero-annotator"
version = "0.2.0"
description = "Automated Zotero PDF paragraph translation and annotation pipeline"
authors = [{ name = "wataru nakamura (naka-wata)" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7",
  "httpx>=0.27",
  "pypdf>=4.0",
  "pymupdf>=1.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "typer>=0.12",
  "rich>=13.7"
]

[project.scripts]
zotero-annotator = "zotero_annotator.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10"
]

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_annotator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741"]

[tool.coverage.run]
omit = [
  # Typer CLI レイヤー（CliRunner を使った統合テストが必要で工数が大きい）
  "src/zotero_annotator/cli.py",
  # PyMuPDF 依存の大規模抽出ロジック（実 PDF が必要）
  "src/zotero_annotator/services/pymupdf_paragraphs.py",
  # 外部 API 依存の翻訳実装群（DeepL/OpenAI 等の実 API が必要）
  "src/zotero_annotator/services/translators/deepl.py",
  "src/zotero_annotator/services/translators/chat_completions.py",
  "src/zotero_annotator/services/translators/llm_common.py",
  "src/zotero_annotator/services/translators/ollama.py",
  "src/zotero_annotator/services/translators/prompts.py",
  "src/zotero_annotator/services/translators/factory.py",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
